--- a/webapp/src/main/webapp/css/standard.css
+++ b/webapp/src/main/webapp/css/standard.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
+    cursor: default;
 }
 
 .gui{
@@ -12,19 +13,20 @@
 }
 
 .remote{
+    padding:20px;
     width: 100%;
     background-color: #f0f0f0;
-    background:url('../img/petrinetz-iltis.png') no-repeat;
-    height: 684px;
     display: block;
 }
 
-.remote_object{
-    position: relative;
+.dropdown-menu li{
+    padding-left: 5px;
 }
 
-.dropdown-menu ul{
-    list-style: none none;
+.dropdown-menu li:hover{
+    cursor: pointer;
+    background-color: #3071a9;
+    color: white;
 }
 
 legend{
