--- a/webapp/src/main/webapp/css/standard.css
+++ b/webapp/src/main/webapp/css/standard.css
@@ -66,3 +66,7 @@ legend{
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.19);
     -webkit-font-smoothing: antialiased;
 }
+
+.accordionButtonGroupTitel{
+    padding-top: 10px;
+}
